<!--
 Copyright 2015 by Chris Gordon

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">ArachNet</string>
    <string name="title_activity_main">ArachNet</string>

    <string name="aleph_ass">Assault Subsection</string>
    <string name="aleph_main">Aleph</string>
    <string name="ariadna_caledonian">Caledonian Highlander Army</string>
    <string name="ariadna_main">Ariadna</string>
    <string name="ariadna_merovingian">Force de RR Merovingienne </string>
    <string name="ariadna_usariadna">USAriadna</string>
    <string name="ca_main">Combined Army</string>
    <string name="ca_morat">Morat Aggression Force</string>
    <string name="ca_shasvastii">Shasvastii Expeditionary Force</string>
    <string name="haqqislam_hassassin">Hassassin Bahram</string>
    <string name="haqqislam_main">Haqqislam</string>
    <string name="haqqislam_qapu_khalqi">Qapu Khalqi </string>
    <string name="merc_main">Mercs</string>
    <string name="nomads_bakunin">Jurisdictional Command of Bakunin</string>
    <string name="nomads_corregidor">Jurisdictional Command of Corregidor</string>
    <string name="nomads_main">Nomads</string>
    <string name="pano_acontecimento">Shock Army of Acontecimento</string>
    <string name="pano_main">Pan-Oceania</string>
    <string name="pano_military_orders">Military Orders</string>
    <string name="pano_neoterra">Neoterran Capitaline Army</string>
    <string name="tohaa_main">Tohaa</string>
    <string name="yujing_iss">Imperial Service</string>
    <string name="yujing_jsa">Japanese Sectorial Army</string>
    <string name="yujing_main">Yu Jing</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_info">About</string>
    <string name="title_activity_browse">Units</string>
    <string name="dialog_about">Thanks to the MayaNet project for their data files.\n\nThanks to Vyo from the Infinity forums for use of his vector graphics files.\n\nInfinity is © Corvus Belli.</string>
    <string name="ListAsListTitle">Units as List</string>
    <string name="ListAsListSummary">Instead of a card view, put the units in a list.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="AlphaUnitListTitle">Alphabetical Unit List</string>
    <string name="AlphaUnitListSummary">Show the units in alphabetical order instead of LI, MI, HI, etc.</string>
    <string name="ShowMercsTitle">Show Mercenaries</string>
    <string name="ShowMercsSummary">Display mercenaries as part of the main Armies. Appropriate mercenaries will always show in Sectorials.</string>
    <string name="title_list_construction">List Construction</string>
    <string name="UnitList">Unit List</string>
    <string name="Unit">Unit</string>
    <string name="List">List</string>
    <string name="action_create">Create</string>
    <string name="unit_logo">Unit logo</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_list_title">You are about to leave</string>
    <string name="cancel_list_message">Your list will be lost.  Continue?</string>
    <string name="ok">Ok</string>
    <string name="group1">Group 1</string>
    <string name="group2">Group 2</string>
    <string name="group3">Group 3</string>
    <string name="group4">Group 4</string>
    <string name="list">List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save As</string>
    <string name="action_rename">Rename</string>
    <string name="action_set_points">Set Points</string>
    <string name="action_delete">Delete</string>
    <string name="list_not_saved">List not saved yet</string>
    <string name="error_deleting_list">Error deleting list:</string>
    <string name="delete_list_question">Do you want to delete this list?</string>
    <string name="title_activity_saved_lists">SavedListsActivity</string>
    <string name="navigation_armies">Armies</string>
    <string name="navigation_saved_lists">Saved Lists</string>

</resources>
