<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright 2015 by Chris Gordon

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="list_as_list"
        android:title="@string/ListAsListTitle"
        android:summary="@string/ListAsListSummary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="alpha_unit_list"
        android:title="@string/AlphaUnitListTitle"
        android:summary="@string/AlphaUnitListSummary"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="show_mercs"
        android:title="@string/ShowMercsTitle"
        android:summary="@string/ShowMercsSummary"
        android:defaultValue="true" />

</PreferenceScreen>