<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_browse"
            android:checked="true"
            android:icon="@drawable/ic_view_list_white_24dp"
            android:title="@string/navigation_armies" />


        <item
            android:id="@+id/navigation_saved_lists"
            android:icon="@drawable/ic_folder_white_24dp"
            android:title="@string/navigation_saved_lists" />



    </group>

    <group android:id="@+id/about_group" android:checkableBehavior="none">

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/navigation_settings" />

        <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/navigation_info" />
    </group>

</menu>